packages/charts/src/components/tooltip/_tooltip.scss
@import '../mixins';

$tooltipBorderColor: $euiColorLightShade;
$tooltipBorderWidth: 1px;
$rowColorStripWidth: 6px;
$maxRowColorStripWidth: 14px;
$rowColorStripAnimatedWidthDelta: 4px;
$colorStripHoverWidth: $rowColorStripWidth + $rowColorStripAnimatedWidthDelta;

$tableBorder: solid $tooltipBorderWidth $tooltipBorderColor;

.echTooltip {
  @include euiToolTipStyle;
  @include euiFontSizeXS;
  padding: 0;
  pointer-events: none;
  user-select: none;
  max-width: 260px;
  background-color: $euiColorEmptyShade;
  color: $euiTextColor;
  overflow: hidden;
  cursor: default;
  transition: box-shadow 400ms, opacity $euiAnimSpeedNormal;

  &--pinned {
    @include euiBottomShadowSmall;
    pointer-events: auto;
    user-select: auto;

    .echTooltip__tableRow--selectable {
      cursor: pointer;
    }

    .echTooltip__tableRow {
      &--selectable:hover:not(&--selected):not(.echTooltip__colorCell--static) {
        .echTooltip__colorStrip {
          width: $colorStripHoverWidth;
        }
      }
    }
    .echTooltip__actions {
      pointer-events: auto;
    }
    .echTooltip__tableWrapper {
      pointer-events: auto;
    }
  }

  &:not(&--pinned) {
    .echTooltip__tableCell--truncate {
      @include euiTextTruncate;
    }
  }

  & > :not(:last-child) {
    border-bottom: $tableBorder;
  }

  .euiTable {
    background-color: transparent;
  }

  .euiTableFooterCell,
  .euiTableHeaderCell,
  .euiTableRowCell {
    color: white;
  }

  &__divider {
    border-bottom: $tableBorder;
  }

  &__metricRow {
    padding: $euiSizeXS ($euiSizeXS * 2);
    display: flex;
    justify-content: space-between;
  }

  &__header {
    font-weight: $euiFontWeightBold;
    margin-bottom: 0;
    padding: $euiSizeXS ($euiSizeXS * 2);
  }

  &__footer {
    font-weight: $euiFontWeightBold;
    border-top: $tableBorder;
    margin-top: 0;
    padding: $euiSizeXS ($euiSizeXS * 2);
  }

  &__actions {
    width: 100%;
    padding-left: $rowColorStripWidth;
    padding-top: $euiSizeS;
    padding-bottom: $euiSizeS;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
  }

  &__action,
  &__prompt {
    padding: $euiSizeS;
    padding-bottom: 0;

    &:first-child {
      padding-top: 0;
    }
  }

  &__action {
    color: $euiTextColor;
    width: 100%;
    display: flex;
    align-items: flex-start;
  }

  &__prompt {
    color: $euiTextSubduedColor;
  }

  &__action {
    cursor: pointer;

    &:not([disabled]):hover {
      text-decoration: underline;
    }

    &[disabled] {
      cursor: not-allowed;
      color: $euiTextSubduedColor;
    }
  }

  &__tableWrapper {
    overflow: auto;
  }

  &__table {
    display: grid;
    border-collapse: collapse;
    width: 100%;

    &--noGrid {
      display: table;
    }
  }

  &__tableHeader,
  &__tableFooter {
    .echTooltip__tableCell {
      cursor: default;
      font-weight: $euiFontWeightBold;
      background-color: $euiColorEmptyShade;
      position: sticky;
      z-index: 1;
    }
  }

  &__tableHeader,
  &__tableBody,
  &__tableFooter,
  &__tableRow {
    // This ignores all above elements for positioning
    // effectively spreading all children in its place
    display: contents;
  }

  &__tableHeader {
    margin-bottom: 0;
    top: 0;

    .echTooltip__tableCell {
      border-bottom: $tableBorder;
      top: 0;
    }
  }

  &__tableFooter {
    margin-top: 0;
    bottom: 0;

    .echTooltip__tableCell {
      border-top: $tableBorder;
      bottom: 0;
    }
  }

  &__tableCell:not(.echTooltip__colorCell) {
    padding: 4px;
  }

  &__tableBody {
    td:not(.echTooltip__colorCell) {
      padding: 2px 4px;
    }
  }

  &__tableRow {
    position: relative;

    &--highlighted {
      background-color: transparentize($euiColorLightShade, 0.5);
    }

    &--selected {
      :not(.echTooltip__colorCell--static) .echTooltip__colorStrip {
        width: $maxRowColorStripWidth;

        &:not(&--bg)::before {
          opacity: 1;
        }
      }
    }
  }

  &__colorCell {
    padding: 0;
    height: 100%;
    position: relative;
    overflow: hidden; // to avoid extra height from color strip styles
    width: $maxRowColorStripWidth;

    &--static {
      width: $rowColorStripWidth;
    }
  }

  &__colorStrip {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    width: $rowColorStripWidth;
    min-width: $rowColorStripWidth;
    max-width: $maxRowColorStripWidth;
    transition: width 200ms;

    &:not(&--bg)::before {
      opacity: 0;
      content: "✓";
      display: flex;
      justify-content: center;
      align-items: center;
      height: 95%; // to center dot better
      font-size: 90%;
      font-weight: bold;
      transition: opacity 200ms;
    }
  }

  &__label {
    @include wrapText;
    min-width: 1px;
    flex: 1 1 auto;
    text-align: left;
  }

  &__value {
    text-align: right;
    font-feature-settings: 'tnum';
  }

  &[dir='rtl'] {
    .echTooltip {
      &__colorStrip {
        left: auto;
        right: 0;
      }
    }
  }
}

